Website up and running

--- a/server/ccg.conf
+++ b/server/ccg.conf
@@ -1,10 +1,16 @@
 LoadModule python_module modules/mod_python.so
-
 NameVirtualHost *:80
+
+Header set Access-Control-Allow-Origin "*"
 
 <VirtualHost *:80>
 	DocumentRoot "/var/www/html"
 	ServerName coolcatgames.com
+</VirtualHost>
+
+<VirtualHost *:80>
+	DocumentRoot "/var/www/html/strangerThings"
+	ServerName strangerthings.coolcatgames.com
 </VirtualHost>
 
 <VirtualHost *:80>
@@ -17,7 +23,7 @@ NameVirtualHost *:80
 
 <VirtualHost *:80>
 	DocumentRoot "/var/www/api"
-	ServerName strangerthings.coolcatgames.com
+	ServerName strangerthingsapi.coolcatgames.com
 	SetHandler python-program
 	PythonHandler mod_python.publisher
 	PythonDebug ON
